[package]
name = "ubits"
version = "0.2.1"
edition = "2021"
description = "Bit fields and masks."
keywords = ["bitfield", "bitmask"]

authors = ["https://github.com/manoadamro"]
repository = "https://github.com/manoadamro/ubits"
homepage = "https://manoadamro.github.io/ubits/doc/ubits/"
documentation = "https://manoadamro.github.io/ubits/doc/ubits/"

readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doc-comment = "0.3.3"
safe-transmute = "0.11.2"
